# cpp-code-optimization-examples

./: CMakeLists.txt  README.md
src/: main.cpp  simpleProfilingTemplate.cpp  simpleProfilingTemplate.h  testDeadCode.cpp  testDeadCode.h  testIfStatements.cpp  testIfStatements.h  testLoopUnrolling.cpp  testLoopUnrolling.h  testPassByReference.cpp  testPassByReference.h  testRedundantCode.cpp  testRedundantCode.h  testReserveVectorMemory.cpp  testReserveVectorMemory.h  testStaticLocalVariable.cpp  testStaticLocalVariable.h  testUnnecessaryNestedLoop.cpp  testUnnecessaryNestedLoop.h
